# user-service

./: Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_02_2119-ffbaf5869d9d_create_table_sellers.py  2026_03_03_0930-4a2dfaf2bb10_set_default_orders_count_for_sellers.py  2026_03_06_1620-9d7ab6c91f2e_add_photo_url_to_users.py  2026_03_06_1655-c2b8e4f7a1d0_add_photo_url_to_sellers.py  e66d64c1161c_create_users_table.py
app/: exceptions.py  main.py  schemas.py
app/api/: deps.py  request_forms.py  utils.py
app/api/routers/: __init__.py  admins.py  auth.py  sellers.py  users.py
app/core/: config.py  database.py  security.py
app/crud/: users_crud.py
app/models/: mixins.py  sellers.py  users.py
app/services/: __init__.py  admin_service.py  base_account_service.py  minio_service.py  seller_service.py  user_service.py
